--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,14 @@ dependencies:
   get: ^4.6.5
   http: ^1.1.0
   flutter_staggered_grid_view: ^0.7.0
-  cached: ^1.6.3
   cached_network_image: ^3.2.3
+  permission_handler: ^10.4.5
+
+  #dependencies for api using dio
+  dio: ^5.3.2
+  internet_connection_checker: ^1.0.0+1
+  top_snackbar_flutter: ^3.1.0
+  scrollable_positioned_list: ^0.3.8
 
 dev_dependencies:
   flutter_test:
